# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  changelog.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: largeSequence.md  monopoli.md  sequence.md
src/: daily_questions_app.py  database_connection.py  grade_interface.py  initialize_database.py  interface.py  main.py  question_repository.py  status_interface.py
src/tests/: repository_test.py  test_daily_questions_app.py  test_repository.py
src/ui/: grade_interface.py  interface.py  status_interface.py
