[tool.poetry]
name = "ot-harjoitustyö"
version = "0.1.0"
description = ""
authors = ["Tommi Kiiski <kiiski.tommi@hotmail.com>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyö"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
